solved the credential login

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-MONGO= 'mongodb+srv://gabby:gabby@cluster0.kewouxn.mongodb.net/test?retryWrites=true&w=majority'
-GOOGLE_ID='558422070378-24jkho4ga4ebnl5e85ae9fq90im6ck63.apps.googleusercontent.com'
-GOOGLE_SECRET='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' 
-NEXTAUTH_SECRET='ahjdyyrggdbvjknq'
-NEXTAUTH_URL='http://localhost:3000'
+MONGO= "mongodb+srv://gabby:gabby@cluster0.kewouxn.mongodb.net/test?retryWrites=true&w=majority"
+GOOGLE_ID="558422070378-cbo41mrjaprajrq2mfgmbo45mkhqganc.apps.googleusercontent.com"
+GOOGLE_SECRET="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" 
+NEXTAUTH_SECRET="ahjdyyrggdbvjknq"
+NEXTAUTH_URL="http://localhost:3000"
