--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
+    "framer-motion": "^10.16.4",
     "mongodb": "^6.2.0",
     "mongoose": "^8.0.0",
     "next": "14.0.1",
